fix dessert & drinks layout issue

--- a/css/media_queries_mobile.css
+++ b/css/media_queries_mobile.css
@@ -24,8 +24,8 @@
     width: 170px;
     padding: 5%;
     font-size: 18px; }
-  .dishes p {
-    padding-top: 20%; }
+  /*.dishes p {
+    padding-top: 20%; }*/
 
   header h1 {
     font-size: 35px;
